gitops/2048/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deployment-2048
  name: deployment-2048
  namespace: game-2048
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        name: docker-2048
        resources:
          requests:
            cpu: "0.5"
            memory: 512M
          limits:
            cpu: "1.0"
            memory: 1G
        ports:
        - containerPort: 80
