gitops/2048/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-2048
  name: service-2048
  namespace: game-2048
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: app-2048
  type: ClusterIP
